[workspace]
resolver = "2"

members = [
  "libra-wallet",
  "genesis-tools",
]

#     "api",
#     "api/openapi-spec-generator",
#     "api/test-context",
#     "api/types",
#     "aptos-move/aptos-aggregator",
#     "aptos-move/aptos-debugger",
#     "aptos-move/aptos-gas",
#     "aptos-move/aptos-gas-profiling",
#     "aptos-move/aptos-release-builder",
#     "aptos-move/aptos-resource-viewer",
#     "aptos-move/aptos-sdk-builder",
#     "aptos-move/aptos-transaction-benchmarks",
#     "aptos-move/aptos-transactional-test-harness",
#     "aptos-move/aptos-validator-interface",
#     "aptos-move/aptos-vm",
#     "aptos-move/aptos-vm-logging",
#     "aptos-move/aptos-vm-profiling",
#     "aptos-move/block-executor",
#     "aptos-move/e2e-move-tests",
#     "aptos-move/e2e-tests",
#     "aptos-move/e2e-testsuite",
#     "aptos-move/framework",
#     "aptos-move/framework/cached-packages",
#     "aptos-move/gas-algebra-ext",
#     "aptos-move/move-examples",
#     "aptos-move/mvhashmap",
#     "aptos-move/package-builder",
#     "aptos-move/vm-genesis",
#     "aptos-move/writeset-transaction-generator",
#     "aptos-node",
#     "config",
#     "config/global-constants",
#     "consensus",
#     "consensus/consensus-types",
#     "consensus/safety-rules",
#     "crates/aptos",
#     "crates/aptos-bitvec",
#     "crates/aptos-build-info",
#     "crates/aptos-compression",
#     "crates/aptos-crypto",
#     "crates/aptos-crypto-derive",
#     "crates/aptos-faucet/cli",
#     "crates/aptos-faucet/core",
#     "crates/aptos-faucet/metrics-server",
#     "crates/aptos-faucet/service",
#     "crates/aptos-genesis",
#     "crates/aptos-id-generator",
#     "crates/aptos-infallible",
#     "crates/aptos-keygen",
#     "crates/aptos-log-derive",
#     "crates/aptos-logger",
#     "crates/aptos-metrics-core",
#     "crates/aptos-network-checker",
#     "crates/aptos-node-identity",
#     "crates/aptos-openapi",
#     "crates/aptos-proptest-helpers",
#     "crates/aptos-push-metrics",
#     "crates/aptos-rate-limiter",
#     "crates/aptos-rest-client",
#     "crates/aptos-retrier",
#     "crates/aptos-rosetta",
#     "crates/aptos-rosetta-cli",
#     "crates/aptos-runtimes",
#     "crates/aptos-speculative-state-helper",
#     "crates/aptos-telemetry",
#     "crates/aptos-telemetry-service",
#     "crates/aptos-temppath",
#     "crates/aptos-time-service",
#     "crates/aptos-warp-webserver",
#     "crates/bounded-executor",
#     "crates/channel",
#     "crates/crash-handler",
#     "crates/fallible",
#     "crates/indexer",
#     "crates/inspection-service",
#     "crates/moving-average",
#     "crates/node-resource-metrics",
#     "crates/num-variants",
#     "crates/proxy",
#     "crates/short-hex-str",
#     "crates/transaction-emitter",
#     "crates/transaction-emitter-lib",
#     "crates/transaction-generator-lib",
#     "ecosystem/indexer-grpc/indexer-grpc-cache-worker",
#     "ecosystem/indexer-grpc/indexer-grpc-data-service",
#     "ecosystem/indexer-grpc/indexer-grpc-file-store",
#     "ecosystem/indexer-grpc/indexer-grpc-fullnode",
#     "ecosystem/indexer-grpc/indexer-grpc-parser",
#     "ecosystem/indexer-grpc/indexer-grpc-utils",
#     "ecosystem/node-checker",
#     "ecosystem/node-checker/fn-check-client",
#     "execution/db-bootstrapper",
#     "execution/executor",
#     "execution/executor-benchmark",
#     "execution/executor-test-helpers",
#     "execution/executor-types",
#     "mempool",
#     "network",
#     "network/builder",
#     "network/discovery",
#     "network/memsocket",
#     "network/netcore",
#     "network/peer-monitoring-service/client",
#     "network/peer-monitoring-service/server",
#     "network/peer-monitoring-service/types",
#     "sdk",
#     "secure/net",
#     "secure/storage",
#     "secure/storage/github",
#     "secure/storage/vault",
#     "state-sync/aptos-data-client",
#     "state-sync/inter-component/consensus-notifications",
#     "state-sync/inter-component/event-notifications",
#     "state-sync/inter-component/mempool-notifications",
#     "state-sync/state-sync-v2/data-streaming-service",
#     "state-sync/state-sync-v2/state-sync-driver",
#     "state-sync/storage-service/client",
#     "state-sync/storage-service/server",
#     "state-sync/storage-service/types",
#     "storage/accumulator",
#     "storage/aptosdb",
#     "storage/backup/backup-cli",
#     "storage/backup/backup-service",
#     "storage/db-tool",
#     "storage/indexer",
#     "storage/jellyfish-merkle",
#     "storage/rocksdb-options",
#     "storage/schemadb",
#     "storage/scratchpad",
#     "storage/state-view",
#     "storage/storage-interface",
#     "testsuite/aptos-fuzzer",
#     "testsuite/aptos-fuzzer/fuzz",
#     "testsuite/dos/http_test",
#     "testsuite/dos/listener",
#     "testsuite/dos/sender",
#     "testsuite/forge",
#     "testsuite/forge-cli",
#     "testsuite/generate-format",
#     "testsuite/module-publish",
#     "testsuite/smoke-test",
#     "testsuite/testcases",

#     # third_party/move
#     "third_party/move/extensions/async/move-async-vm",
#     "third_party/move/extensions/move-table-extension",
#     "third_party/move/move-analyzer",
#     "third_party/move/move-binary-format",
#     "third_party/move/move-binary-format/serializer-tests",
#     "third_party/move/move-borrow-graph",
#     "third_party/move/move-bytecode-verifier",
#     "third_party/move/move-bytecode-verifier/bytecode-verifier-tests",
#     "third_party/move/move-bytecode-verifier/fuzz",
#     "third_party/move/move-bytecode-verifier/invalid-mutations",
#     "third_party/move/move-bytecode-verifier/transactional-tests",
#     "third_party/move/move-command-line-common",
#     "third_party/move/move-compiler",
#     "third_party/move/move-compiler/transactional-tests",
#     "third_party/move/move-core/types",
#     "third_party/move/move-ir-compiler",
#     "third_party/move/move-ir-compiler/move-bytecode-source-map",
#     "third_party/move/move-ir-compiler/move-ir-to-bytecode",
#     "third_party/move/move-ir-compiler/move-ir-to-bytecode/syntax",
#     "third_party/move/move-ir-compiler/transactional-tests",
#     "third_party/move/move-ir/types",
#     "third_party/move/move-model",
#     "third_party/move/move-prover",
#     "third_party/move/move-prover/boogie-backend",
#     "third_party/move/move-prover/bytecode",
#     "third_party/move/move-prover/interpreter",
#     "third_party/move/move-prover/interpreter-testsuite",
#     "third_party/move/move-prover/interpreter/crypto",
#     "third_party/move/move-prover/move-abigen",
#     "third_party/move/move-prover/move-docgen",
#     "third_party/move/move-prover/move-errmapgen",
#     # "third_party/move/move-prover/mutation",
#     "third_party/move/move-prover/test-utils",
#     "third_party/move/move-prover/tools/spec-flatten",
#     "third_party/move/move-symbol-pool",
#     "third_party/move/move-vm/integration-tests",
#     "third_party/move/move-vm/paranoid-tests",
#     "third_party/move/move-vm/runtime",
#     "third_party/move/move-vm/test-utils",
#     "third_party/move/move-vm/transactional-tests",
#     "third_party/move/move-vm/types",
#     "third_party/move/testing-infra/module-generation",
#     "third_party/move/testing-infra/test-generation",
#     "third_party/move/testing-infra/transactional-test-runner",
#     "third_party/move/tools/move-bytecode-utils",
#     "third_party/move/tools/move-bytecode-viewer",
#     "third_party/move/tools/move-cli",
#     "third_party/move/tools/move-coverage",
#     "third_party/move/tools/move-disassembler",
#     "third_party/move/tools/move-explain",
#     "third_party/move/tools/move-package",
#     "third_party/move/tools/move-resource-viewer",
#     "third_party/move/tools/move-unit-test",
#     "third_party/move/tools/read-write-set",
#     "third_party/move/tools/read-write-set/dynamic",
#     "third_party/move/tools/read-write-set/types",
#     "types",
#     "vm-validator",
# ]

# exclude = ["crates/aptos-protos"]

# # NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# # never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# # test-only code included.
# #
# # For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
# default-members = [
#     "aptos-node",
#     "consensus/safety-rules",
#     "crates/aptos",
#     "crates/aptos-faucet/service",
#     "crates/aptos-keygen",
#     "crates/aptos-rate-limiter",
#     "crates/aptos-rosetta",
#     "crates/transaction-emitter",
#     "aptos-move/framework",
#     "execution/db-bootstrapper",
#     "storage/backup/backup-cli",
#     "ecosystem/node-checker",
# ]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.64"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
zapatos-cli = { package = "aptos", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
# aptos-accumulator = { git = "https://github.com/aptos-labs/aptos-core/storage/accumulator", git = "https://github.com/aptos-labs/aptos-core/storage/accumulator" }
# aptos-aggregator = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-aggregator" }
# libra-api = { package = "aptos-api", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-api-test-context = { git = "https://github.com/aptos-labs/aptos-core/api/test-context" }
# libra-api-types = { package = "aptos-api-types", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-backup-cli = { git = "https://github.com/aptos-labs/aptos-core/storage/backup/backup-cli" }
# aptos-backup-service = { git = "https://github.com/aptos-labs/aptos-core/storage/backup/backup-service" }
# aptos-bounded-executor = { git = "https://github.com/aptos-labs/aptos-core/crates/bounded-executor" }
# aptos-block-executor = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/block-executor" }
# aptos-bitvec = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-bitvec" }
# aptos-build-info = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-build-info" }
zapatos-cached-packages = { package = "aptos-cached-packages", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
# libra-cached-packages = { package = "aptos-cached-packages", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-channels = { git = "https://github.com/aptos-labs/aptos-core/crates/channel" }
# aptos-compression = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-compression" }
# aptos-consensus = { git = "https://github.com/aptos-labs/aptos-core/consensus" }
# aptos-consensus-notifications = { git = "https://github.com/aptos-labs/aptos-core/state-sync/inter-component/consensus-notifications" }
# aptos-consensus-types = { git = "https://github.com/aptos-labs/aptos-core/consensus/consensus-types" }
zapatos-config = { package = "aptos-config", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
# aptos-crash-handler = { git = "https://github.com/aptos-labs/aptos-core/crates/crash-handler" }
zapatos-crypto = { package = "aptos-crypto", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-crypto-derive = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-crypto-derive" }
# aptos-data-client = { git = "https://github.com/aptos-labs/aptos-core/state-sync/aptos-data-client" }
# aptos-data-streaming-service = { git = "https://github.com/aptos-labs/aptos-core/state-sync/state-sync-v2/data-streaming-service" }
# aptos-db = { git = "https://github.com/aptos-labs/aptos-core/storage/aptosdb" }
# aptos-db-indexer = { git = "https://github.com/aptos-labs/aptos-core/storage/indexer" }
# aptos-db-tool = { git = "https://github.com/aptos-labs/aptos-core/storage/db-tool" }
# aptos-debugger = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-debugger" }
# aptos-event-notifications = { git = "https://github.com/aptos-labs/aptos-core/state-sync/inter-component/event-notifications" }
# aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/execution/executor" }
# aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/execution/executor-test-helpers" }
# aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/execution/executor-types" }
# aptos-faucet-cli = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-faucet/cli" }
# aptos-faucet-core = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-faucet/core" }
# aptos-faucet-service = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-faucet/service" }
# aptos-faucet-metrics-server = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-faucet/metrics-server" }
# aptos-fallible = { git = "https://github.com/aptos-labs/aptos-core/crates/fallible" }
# aptos-forge = { git = "https://github.com/aptos-labs/aptos-core/testsuite/forge" }
zapatos-framework = { package = "aptos-framework", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-fuzzer = { git = "https://github.com/aptos-labs/aptos-core/testsuite/aptos-fuzzer" }
zapatos-gas = { package = "aptos-gas", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-gas-algebra-ext = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/gas-algebra-ext" }
# aptos-gas-profiling = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-gas-profiling" }
zapatos-genesis = { package = "aptos-genesis", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
zapatos-github-client = { package = "aptos-github-client", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-global-constants = { git = "https://github.com/aptos-labs/aptos-core/config/global-constants" }
# aptos-id-generator = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-id-generator" }
# aptos-indexer = { git = "https://github.com/aptos-labs/aptos-core/crates/indexer" }
# aptos-indexer-grpc-cache-worker = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/indexer-grpc/indexer-grpc-cache-worker" }
# aptos-indexer-grpc-data-service = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/indexer-grpc/indexer-grpc-data-service" }
# aptos-indexer-grpc-file-store = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/indexer-grpc/indexer-grpc-file-store" }
# aptos-indexer-grpc-fullnode = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/indexer-grpc/indexer-grpc-fullnode" }
# aptos-indexer-grpc-utils = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/indexer-grpc/indexer-grpc-utils" }
# aptos-indexer-grpc-parser = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/indexer-grpc/indexer-grpc-parser" }
# aptos-infallible = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-infallible" }
# aptos-inspection-service = { git = "https://github.com/aptos-labs/aptos-core/crates/inspection-service" }
# aptos-jellyfish-merkle = { git = "https://github.com/aptos-labs/aptos-core/storage/jellyfish-merkle" }
zapatos-keygen = { package = "aptos-keygen", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor" }
# aptos-language-e2e-tests = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/e2e-tests" }
# aptos-log-derive = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-log-derive" }
# aptos-logger = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-logger" }
# aptos-mempool = { git = "https://github.com/aptos-labs/aptos-core/mempool" }
# aptos-mempool-notifications = { git = "https://github.com/aptos-labs/aptos-core/state-sync/inter-component/mempool-notifications" }
# aptos-memsocket = { git = "https://github.com/aptos-labs/aptos-core/network/memsocket" }
# aptos-metrics-core = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-metrics-core" }
# aptos-move-examples = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/move-examples" }
# aptos-moving-average = { git = "https://github.com/aptos-labs/aptos-core/crates/moving-average" }
# aptos-mvhashmap = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/mvhashmap" }
# aptos-netcore = { git = "https://github.com/aptos-labs/aptos-core/network/netcore" }
# aptos-network = { git = "https://github.com/aptos-labs/aptos-core/network" }
# aptos-network-builder = { git = "https://github.com/aptos-labs/aptos-core/network/builder" }
# aptos-network-checker = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-network-checker" }
# aptos-network-discovery = { git = "https://github.com/aptos-labs/aptos-core/network/discovery" }
# aptos-node = { git = "https://github.com/aptos-labs/aptos-core/aptos-node" }
# aptos-node-checker = { git = "https://github.com/aptos-labs/aptos-core/ecosystem/node-checker" }
# aptos-node-identity = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-node-identity" }
# aptos-node-resource-metrics = { git = "https://github.com/aptos-labs/aptos-core/crates/node-resource-metrics" }
# aptos-num-variants = { git = "https://github.com/aptos-labs/aptos-core/crates/num-variants" }
# aptos-openapi = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-openapi" }
# aptos-package-builder = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/package-builder" }
# aptos-peer-monitoring-service-client = { git = "https://github.com/aptos-labs/aptos-core/network/peer-monitoring-service/client" }
# aptos-peer-monitoring-service-server = { git = "https://github.com/aptos-labs/aptos-core/network/peer-monitoring-service/server" }
# aptos-peer-monitoring-service-types = { git = "https://github.com/aptos-labs/aptos-core/network/peer-monitoring-service/types" }
# libra-proptest-helpers = { package = "aptos-proptest-helpers", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-protos = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-protos" }
# libra-proxy = { package = "aptos-proxy", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-push-metrics = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-push-metrics" }
# aptos-rate-limiter = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-rate-limiter" }
# aptos-release-builder = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-release-builder" }
# aptos-resource-viewer = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-resource-viewer" }
# aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-rest-client" }
# aptos-retrier = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-retrier" }
# aptos-rocksdb-options = { git = "https://github.com/aptos-labs/aptos-core/storage/rocksdb-options" }
# aptos-rosetta = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-rosetta" }
# aptos-runtimes = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-runtimes" }
# aptos-safety-rules = { git = "https://github.com/aptos-labs/aptos-core/consensus/safety-rules" }
# aptos-schemadb = { git = "https://github.com/aptos-labs/aptos-core/storage/schemadb" }
# aptos-scratchpad = { git = "https://github.com/aptos-labs/aptos-core/storage/scratchpad" }
zapatos-sdk = { package = "aptos-sdk", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-sdk-builder = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-sdk-builder" }
# aptos-secure-net = { git = "https://github.com/aptos-labs/aptos-core/secure/net" }
# libra-secure-storage = { package = "aptos-secure-storage", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-short-hex-str = { git = "https://github.com/aptos-labs/aptos-core/crates/short-hex-str" }
# aptos-speculative-state-helper = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-speculative-state-helper" }
# aptos-state-sync-driver = { git = "https://github.com/aptos-labs/aptos-core/state-sync/state-sync-v2/state-sync-driver" }
# libra-state-view = { package = "libra-state-view", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/storage/storage-interface" }
# aptos-storage-service-client = { git = "https://github.com/aptos-labs/aptos-core/state-sync/storage-service/client" }
# aptos-storage-service-types = { git = "https://github.com/aptos-labs/aptos-core/state-sync/storage-service/types" }
# aptos-storage-service-server = { git = "https://github.com/aptos-labs/aptos-core/state-sync/storage-service/server" }
# aptos-telemetry = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-telemetry" }
# aptos-telemetry-service = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-telemetry-service" }
# aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-temppath" }
# aptos-testcases = { git = "https://github.com/aptos-labs/aptos-core/testsuite/testcases" }
# aptos-time-service = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-time-service", features = [
#     "async",
# ] }
# aptos-transaction-emitter-lib = { git = "https://github.com/aptos-labs/aptos-core/crates/transaction-emitter-lib" }
# aptos-transaction-generator-lib = { git = "https://github.com/aptos-labs/aptos-core/crates/transaction-generator-lib" }
# aptos-transactional-test-harness = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-transactional-test-harness" }
zapatos-types = { package = "aptos-types", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-validator-interface = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-validator-interface" }
# aptos-vault-client = { git = "https://github.com/aptos-labs/aptos-core/secure/storage/vault" }
zapatos-vm = { package = "aptos-vm", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-vm-logging = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/aptos-vm-logging" }
zapatos-vm-genesis = { package = "aptos-vm-genesis", git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# aptos-vm-validator = { git = "https://github.com/aptos-labs/aptos-core/vm-validator" }
# aptos-warp-webserver = { git = "https://github.com/aptos-labs/aptos-core/crates/aptos-warp-webserver" }
# aptos-writeset-generator = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/writeset-transaction-generator" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
again = "0.1.2"
anyhow = "1.0.62"
arc-swap = "1.5.0"
arr_macro = "0.1.3"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
assert_approx_eq = "1.1.0"
assert_unordered = "0.1.1"
async-stream = "0.3"
async-trait = "0.1.53"
axum = "0.5.16"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
backtrace = "0.3.58"

bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bitvec = "0.19.4"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
blst = "0.3.7"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
cfg-if = "1.0.0"
claims = "0.7"
clap = { version = "3.2.23", features = ["derive", "env", "suggestions"] }
clap_complete = "3.2.3"
cloud-storage = { version = "0.11.1", features = ["global-client"] }
codespan-reporting = "0.11.1"
console-subscriber = "0.1.8"
const_format = "0.2.26"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossbeam-queue = "0.3.5"
csv = "1.2.1"
curve25519-dalek = "3"
dashmap = "5.2.0"
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
derivative = "2.2.0"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "4.0.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.8"
env_logger = "0.9.0"
erased-serde = "0.3.13"
event-listener = "2.5.3"
fail = "0.5.0"
field_count = "0.1.1"
flate2 = "1.0.24"
fs_extra = "1.2.0"
futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
futures-channel = "= 0.3.24"
futures-core = "0.3.25"
futures-util = "0.3.21"
gcp-bigquery-client = "0.13.0"
get_if_addrs = "0.5.3"
git2 = "0.16.1"
git-version = "0.3.5"
glob = "0.3.0"
goldenfile = "1.1.0"
handlebars = "4.2.2"
heck = "0.3.2"
hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
ipnet = "2.5.0"
itertools = "0.10.3"
jemallocator = { version = "0.3.2", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
json-patch = "0.2.6"
jsonwebtoken = "8.1"
k8s-openapi = { version = "0.11.0", default-features = false, features = [
    "v1_15",
] }
kube = { version = "0.51.0", features = ["jsonpatch"] }
libfuzzer-sys = "=0.3.2"
libsecp256k1 = "0.7.0"
log = "0.4.17"
lru = "0.7.5"
lz4 = "1.24.0"
maplit = "1.0.2"
mime = "0.3.16"
mirai-annotations = "1.12.0"
mockall = "0.11.0"
more-asserts = "0.3.0"
native-tls = "0.2.10"
ntest = "0.9.0"
num_cpus = "1.13.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
owo-colors = "3.5.0"
parking_lot = "0.12.0"
paste = "1.0.7"
pbjson = "0.4.0"
percent-encoding = "2.1.0"
pin-project = "1.0.10"
poem = { version = "=1.3.55", features = ["anyhow", "rustls"] }
poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
pretty_assertions = "1.2.1"
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.0", default-features = false }
prometheus-http-query = "0.5.2"
prometheus-parse = "0.2.4"
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.11.3"
prost-types = "0.10.1"
quanta = "0.10.1"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
rayon = "1.5.2"
redis = { version = "0.22.3", features = ["tokio-comp", "script"] }
redis-test = { version = "0.1.1", features = ["aio"] }
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rocksdb = { version = "0.20.1", features = ["lz4"] }
rstest = "0.15.0"
rusty-fork = "0.3.0"
sha-1 = "0.10.0"
sha2 = "0.9.3"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
siphasher = "0.3.10"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_repr = "0.1"
serde-name = "0.1.1"
# serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde-generate = "0.25.1"
# serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde-reflection = "0.3.6"

serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
smallvec = "1.8.0"
static_assertions = "1.1.0"
stats_alloc = "0.1.8"
status-line = "0.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
structopt = "0.3.21"
substreams = "0.0.17"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.24.2"
tempfile = "3.3.0"
termcolor = "1.1.2"
textwrap = "0.15.0"
thiserror = "1.0.37"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
trybuild = "1.0.41"
tokio = { version = "1.21.0", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-metrics = "0.1.0"
tokio-retry = "0.3.0"
tokio-stream = "0.1.8"
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
tonic = { version = "0.8.3", features = [
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
] }
tonic-reflection = "0.6.0"
ureq = { version = "1.5.4", features = [
    "json",
    "native-tls",
], default_features = false }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
walkdir = "2.3.2"
warp = { version = "0.3.3", features = ["tls"] }
warp-reverse-proxy = "0.5.0"
which = "4.2.5"
x25519-dalek = "1.2.0"

# MOVE DEPENDENCIES
# move-abigen = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover/move-abigen" }
# move-binary-format = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-binary-format" }
# move-bytecode-verifier = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-bytecode-verifier" }
# move-bytecode-utils = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-bytecode-utils" }
# move-cli = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-cli" }
# move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-command-line-common" }
# move-coverage = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-coverage" }
# move-compiler = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-compiler" }
# move-core-types = { git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# move-docgen = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover/move-docgen" }
# move-disassembler = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-disassembler" }
# move-ir-compiler = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-ir-compiler" }
# move-model = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-model" }
# move-package = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-package" }
# move-prover = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover" }
# move-prover-boogie-backend = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover/boogie-backend" }
# move-stackless-bytecode = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover/bytecode" }
# aptos-move-stdlib = { git = "https://github.com/aptos-labs/aptos-core/aptos-move/framework/move-stdlib" }
# move-prover-test-utils = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover/test-utils" }
# move-resource-viewer = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-resource-viewer" }
# move-stackless-bytecode-interpreter = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-prover/interpreter" }
# move-symbol-pool = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-symbol-pool" }
# move-table-extension = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/extensions/move-table-extension" }
# move-transactional-test-runner = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/testing-infra/transactional-test-runner" }
# move-unit-test = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/move-unit-test", features = ["table-extension"] }
# move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-vm/runtime" }
# move-vm-test-utils = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/move-vm/test-utils", features = ["table-extension"] }
# move-vm-types = { git = "https://github.com/0o-de-lally/zapatos.git", branch ="vendor"}
# read-write-set = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/read-write-set" }
# read-write-set-dynamic = { git = "https://github.com/aptos-labs/aptos-core/third_party/move/tools/read-write-set/dynamic" }


[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = true
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true

# This is a temporary workaround to avoid multiple library
# definitions for LZ4 (caused by rust-rocksdb).
# This will be removed once our pull requests land.
# https://github.com/rust-rocksdb/rust-rocksdb/issues/666
[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
