[package]
name = "libra-wallet"
version = "0.1.0"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]

# Different than workspace
dialoguer = "0.10.4"
clap = { version = "4.2.4", features = ["derive"] }

# Same as vendor workspace
dirs = { workspace = true }
serde_yaml = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
blst = { workspace = true }
zapatos-types = { workspace = true }
zapatos-crypto = { workspace = true }
zapatos-keygen = { workspace = true }
zapatos-genesis = { workspace = true }
zapatos-config = { workspace = true }
ol-keys = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
diem-wallet = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
